messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging-app
  template:
    metadata:
      labels:
        app: django-messaging-app
    spec:
      containers:
        - name: django-messaging-app
          image: your-dockerhub-username/django-messaging-app:2.0  # Update to version 2.0
          ports:
            - containerPort: 8000
