messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-app
spec:
  type: ClusterIP
  selector:
    app: django-messaging-app-green  # Initially point to green
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
